# breakout

./: .gitignore  Cargo.toml  README.md
shaders/: post_processing.frag  post_processing.vs  text_2d.vs
src/: ball.rs  game.rs  game_level.rs  game_object.rs  graphics.rs  lib.rs  macros.rs  main.rs  particle_generator.rs  powerup.rs  resource_manager.rs  shader.rs  shader_manager.rs  sprite_renderer.rs  texture.rs  texture_manager.rs
src/graphics/: mod.rs  post_processor.rs  shader.rs  shader_manager.rs  sprite_renderer.rs  text_renderer.rs  texture.rs  texture_manager.rs
